Fix welcome page on Iphone 5

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -17,7 +17,7 @@
 }
 
 .home-description {
-  flex: 8;
+  flex: 5;
   max-width: 500px;
 }
 
